--- a/html/final.html
+++ b/html/final.html
@@ -39,7 +39,7 @@
     <td>Somayye</td>
     <td>?</td>
     <td>Tehran</td>
-    <td><i>20</i></td>
+    <td><u>20</u></td>
     <td></td>
 </tr>
 <tr>
@@ -47,13 +47,13 @@
     <td>25</td>
     <td>New York</td>
     <td>19</td>
-    <td><i>Khareji!</i></td>
+    <td><u>Khareji!</u></td>
 </tr>
 <tr>
     <td>Asghar</td>
     <td>30</td>
     <td>???</td>
-    <td><i>0</i></td>
+    <td><u>0</u></td>
     <td><b>Failed!</b></td>
 </tr>
 
